# rule_enum

./: .dockerignore  .gitignore  Dockerfile  ReadMe.md  dune  dune-project  find_equiv.py  run_opt.sh  termcount.py
eval/: bool_v0_c3_s5.txt  bool_v0_c3_s7.txt  bool_v0_c3_s9.txt  bool_v0c3.csv  bool_v0c3.irs  bool_v0c3.tex  bool_v0c3_s5.csv  bool_v0c3_s5.irs  bool_v0c3_s5.rules  bool_v0c3_s5.tex  bool_v0c3_s7.csv  bool_v0c3_s7.irs  bool_v0c3_s7.rules  bool_v0c3_s7.tex  bool_v0c3_s9.csv  bool_v0c3_s9.irs  bool_v0c3_s9.rules  bool_v0c3_s9.tex  bool_vcs3.csv  bool_vcs3.tex  bool_vcs3_s5.csv  bool_vcs3_s5.irs  bool_vcs3_s5.rules  bool_vcs3_s5.tex  bool_vcs3_s5.txt  bool_vcs3_s9.csv  bool_vcs3_s9.irs  bool_vcs3_s9.rules  bool_vcs3_s9.tex  bool_vcs3_s9.txt  bv4_vcs3.csv  bv4_vcs3.rules  int_vcs3.csv  int_vcs3.irs  int_vcs3.rules
eval/ruler/: bool_v0c3_s5.json  bool_v0c3_s7.json  bool_v0c3_s9.json  derive_bool_3_2_0-3_4_0.json  ruler_bool_3_2_0.json  ruler_bool_3_2_0.rules  ruler_bool_3_2_0.txt  ruler_bool_3_2_0_norm_v0c3.txt  ruler_bool_3_2_0_smt.json  ruler_bool_3_4_0.json  ruler_bool_3_4_0.rules  ruler_bool_3_4_0.txt  (+1 more)
lib/: algorithm.ml  domain.ml  domain_bool.ml  domain_bv.ml  domain_demo.ml  domain_int.ml  dune  enum.ml  eval.ml  kbo.ml  parse.ml  progress.ml  rewrite.ml  smt.ml  types.ml
scripts/: count_var_rules.py  log2csv.py  ruler_rules_to_term.py  ruler_to_rules.py  rules_to_ruler.py  term_size_counter.py  termgen.py  visualize.py
test/: bench_enum.ml  bench_rewrite.ml  diag_classes.ml  dune  profile.ml  profile_inner.ml  test_rule_enum.ml  verify_missing.ml
(+51 files in other folders)
