(test
 (name test_rule_enum)
 (libraries rule_enum))

(executable
 (name bench_rewrite)
 (libraries rule_enum unix))

(executable
 (name diag_classes)
 (libraries rule_enum))

(executable
 (name bench_enum)
 (libraries rule_enum unix))

(executable
 (name verify_missing)
 (libraries rule_enum))

(executable
 (name profile)
 (libraries rule_enum))

(executable
 (name profile_inner)
 (libraries rule_enum))
